@@ -85,6 +85,21 @@ copy /Y obj\wgx\wgx.h obj\dll\wgx
 mkdir obj\dll\zenwinx
 copy /Y obj\zenwinx\*.h obj\dll\zenwinx\
 
+:: build list of headers to produce dependencies
+:: for MinGW/SDK makefiles from
+cd obj
+dir /S /B *.h >headers || exit /B 1
+copy /Y .\headers .\bootexctrl || exit /B 1
+copy /Y .\headers .\console    || exit /B 1
+copy /Y .\headers .\udefrag    || exit /B 1
+copy /Y .\headers .\wgx        || exit /B 1
+copy /Y .\headers .\zenwinx    || exit /B 1
+copy /Y .\headers .\gui        || exit /B 1
+copy /Y .\headers .\hibernate  || exit /B 1
+copy /Y .\headers .\lua5.1     || exit /B 1
+copy /Y .\headers .\native     || exit /B 1
+cd ..
+
 :: let's build all modules by selected compiler
 if %UD_BLD_FLG_USE_COMPILER% equ 0 (
     echo No parameters specified, using defaults.
@@ -271,16 +286,24 @@ exit /B 0
     if %UD_BLD_FLG_USE_COMPILER% equ %UD_BLD_FLG_USE_WINDDK% (
         echo Compile monolithic native interface...
         pushd obj\zenwinx
+        :: zenwinx.c needs to be recompiled because of DllMain
+        del /s /q zenwinx.obj
         %UD_BUILD_TOOL% zenwinx.build static-lib || goto fail
         cd ..\udefrag
+        :: udefrag.c needs to be recompiled because of DllMain
+        del /s /q udefrag.obj
         %UD_BUILD_TOOL% udefrag.build static-lib || goto fail
         cd ..\native
         %UD_BUILD_TOOL% defrag_native.build || goto fail
 
         echo Compile native DLL's...
         cd ..\zenwinx
+        :: zenwinx.c needs to be recompiled because of DllMain
+        del /s /q zenwinx.obj
         %UD_BUILD_TOOL% zenwinx.build || goto fail
         cd ..\udefrag
+        :: udefrag.c needs to be recompiled because of DllMain
+        del /s /q udefrag.obj
         %UD_BUILD_TOOL% udefrag.build || goto fail
     ) else (
         pushd obj\zenwinx
@@ -298,8 +321,13 @@ exit /B 0
     )
 
     cd ..\lua5.1
+    :: _objects.mac needs to be recompiled because
+    :: three different modules share a single directory
+    del /s /q _objects.mac
     %UD_BUILD_TOOL% lua5.1a_dll.build || goto fail
+    del /s /q _objects.mac
     %UD_BUILD_TOOL% lua5.1a_exe.build || goto fail
+    del /s /q _objects.mac
     %UD_BUILD_TOOL% lua5.1a_gui.build || goto fail
 
     rem workaround for WDK 6 and above
